Fix(Auth):Separar logica de subir imagenes para avatar y colores
