# docs/swagger.yaml
@@ -78,8 +78,6 @@ definitions:
     type: object
   structs_request.RegisterRequest:
     properties:
-      avatar_file_id:
-        type: integer
       city:
         type: string
       country:
@@ -96,8 +94,6 @@ definitions:
         type: string
       prefix:
         type: string
-      primary_color:
-        type: string
       referral_code:
         type: string
       registration_source:
@@ -108,8 +104,6 @@ definitions:
         type: string
       role_id:
         type: integer
-      secondary_color:
-        type: string
       source_id:
         type: integer
       workstation:
@@ -125,6 +119,8 @@ definitions:
     type: object
   structs_request.UpdateUserRequest:
     properties:
+      avatar_collection_id:
+        type: string
       email:
         type: string
       name:
@@ -138,6 +134,8 @@ definitions:
     type: object
   structs_response.GetUserResponse:
     properties:
+      collection_id:
+        type: string
       email:
         type: string
       email_confirmed:
@@ -159,6 +157,8 @@ definitions:
     type: object
   structs_response.RegisterResponse:
     properties:
+      collection_id:
+        type: string
       email:
         type: string
       id:
@@ -349,6 +349,52 @@ paths:
       summary: Crear Permiso
       tags:
       - Permissions
+  /private/auth/branding:
+    post:
+      consumes:
+      - multipart/form-data
+      description: Permite subir imagen de avatar para el usuario, logo para el gimnasio
+        y definir colores institucionales.
+      parameters:
+      - description: Imagen de avatar
+        in: formData
+        name: avatar
+        type: file
+      - description: Imagen de logo (solo Gym)
+        in: formData
+        name: logo
+        type: file
+      - description: Color primario
+        in: formData
+        name: primary_color
+        type: string
+      - description: Color secundario
+        in: formData
+        name: secondary_color
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties: true
+            type: object
+        "401":
+          description: Unauthorized
+          schema:
+            additionalProperties: true
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties: true
+            type: object
+      security:
+      - BearerAuth: []
+      summary: Actualizar branding (avatar, logo, colores)
+      tags:
+      - Auth
   /private/auth/relationships:
     get:
       consumes:
