# src/core/auth/domain/structs/request/update_user_request.go
@@ -6,4 +6,6 @@ type UpdateUserRequest struct {
 	Phone    *string `json:"phone"`
 	Password *string `json:"password"`
 	Email    *string `json:"email"`
+	AvatarCollectionID *string `json:"avatar_collection_id"`
 }
+
